# CrowdCounting-P2PNet

./: README.md  engine.py  pyproject.toml  requirements.txt  run_test.py  train.py
crowd_datasets/SHHA/: SHHA.py
models/: backbone.py  p2pnet.py
util/: misc.py
